Implementation of composite bookmarks