@@ -3,24 +3,20 @@
  * Neo4j Sweden AB [http://neo4j.com]
  * This file is a commercial add-on to Neo4j Enterprise Edition.
  */
-package com.neo4j.fabric.transaction;
+package com.neo4j.fabric.bookmark;
 
 import com.neo4j.fabric.bolt.FabricBookmark;
-import com.neo4j.fabric.config.FabricConfig;
 import com.neo4j.fabric.driver.RemoteBookmark;
 import com.neo4j.fabric.executor.Location;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.time.Duration;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Set;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 import org.neo4j.bolt.runtime.BoltResponseHandler;
 import org.neo4j.bolt.runtime.Bookmark;
-import org.neo4j.bolt.txtracking.TransactionIdTracker;
 import org.neo4j.kernel.database.NamedDatabaseId;
 
 import static com.neo4j.fabric.TestUtils.createUri;
@@ -28,39 +24,27 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
 import static org.neo4j.kernel.database.DatabaseIdRepository.NAMED_SYSTEM_DATABASE_ID;
 
-class TransactionBookmarkManagerTest
+class MixedModeBookmarkManagerTest
 {
-    private final Location.Remote location1 = new Location.Remote( 1, createUri( "bolt://somewhere:1001" ), null );
-    private final Location.Remote location2 = new Location.Remote( 2, createUri( "bolt://somewhere:1002" ), null );
+    private final UUID location1Uuid = UUID.randomUUID();
+    private final UUID location2Uuid = UUID.randomUUID();
+    private final Location.Remote.External location1 = new Location.Remote.External( 1, location1Uuid, createUri( "bolt://somewhere:1001" ), null );
+    private final Location.Remote.External location2 = new Location.Remote.External( 2, location2Uuid, createUri( "bolt://somewhere:1002" ), null );
 
-    private final FabricConfig fabricConfig = mock(FabricConfig.class);
-    private final TransactionIdTracker transactionIdTracker = mock(TransactionIdTracker.class);
-    private final TransactionBookmarkManager bookmarkManager = new TransactionBookmarkManager( fabricConfig, transactionIdTracker, Duration.ofSeconds( 123 ) );
-
-    @BeforeEach
-    void beforeEach()
-    {
-        var graph1 = new FabricConfig.Graph( 1, FabricConfig.RemoteUri.create( "bolt://somewhere:1001" ), null, null, emptyDriverConfig() );
-        var graph2 = new FabricConfig.Graph( 2, FabricConfig.RemoteUri.create( "bolt://somewhere:1002" ), null, null, emptyDriverConfig() );
-
-        var database = mock( FabricConfig.Database.class );
-        when( database.getGraphs() ).thenReturn( Set.of( graph1, graph2 ) );
-        when( fabricConfig.getDatabase() ).thenReturn( database );
-    }
+    private final LocalGraphTransactionIdTracker transactionIdTracker = mock(LocalGraphTransactionIdTracker.class);
+    private final TransactionBookmarkManager bookmarkManager = new MixedModeBookmarkManager( transactionIdTracker );
 
     @Test
     void testBasicRemoteBookmarkHandling()
     {
-        bookmarkManager.recordBookmarkReceivedFromGraph( location1, bookmark( "BB-1" ));
-        bookmarkManager.recordBookmarkReceivedFromGraph( location2, bookmark( "BB-2" ));
-        bookmarkManager.recordBookmarkReceivedFromGraph( location1, bookmark( "BB-3" ));
+        bookmarkManager.remoteTransactionCommitted( location1, bookmark( "BB-1" ));
+        bookmarkManager.remoteTransactionCommitted( location2, bookmark( "BB-2" ));
 
         var bookmark = bookmarkManager.constructFinalBookmark();
         var graph1State = getGraphState( bookmark, location1 );
-        assertThat( graph1State ).contains( "BB-3" );
+        assertThat( graph1State ).contains( "BB-1" );
         var graph2State = getGraphState( bookmark, location2 );
         assertThat( graph2State ).contains( "BB-2" );
     }
@@ -68,15 +52,15 @@ class TransactionBookmarkManagerTest
     @Test
     void testSubmittedBookmarkHandling()
     {
-        var b1 = bookmark( graphState( 1, "BB-1", "BB-2" ), graphState( 2, "BB-3", "BB-4" ) );
-        var b2 = bookmark( graphState( 1, "BB-5" ) );
+        var b1 = bookmark( graphState( location1Uuid, "BB-1", "BB-2" ), graphState( location2Uuid, "BB-3", "BB-4" ) );
+        var b2 = bookmark( graphState( location1Uuid, "BB-5" ) );
         bookmarkManager.processSubmittedByClient( List.of( b1, b2 ) );
 
         assertThat( getBookmarksForGraph( location1 ) ).contains( "BB-1", "BB-2", "BB-5" );
         assertThat( getBookmarksForGraph( location2 ) ).contains( "BB-3", "BB-4" );
 
-        bookmarkManager.recordBookmarkReceivedFromGraph( location1, bookmark( "BB-6" ));
-        bookmarkManager.recordBookmarkReceivedFromGraph( location2, bookmark("BB-7" ));
+        bookmarkManager.remoteTransactionCommitted( location1, bookmark( "BB-6" ));
+        bookmarkManager.remoteTransactionCommitted( location2, bookmark("BB-7" ));
 
         assertThat( getBookmarksForGraph( location1 ) ).contains( "BB-1", "BB-2", "BB-5" );
         assertThat( getBookmarksForGraph( location2 ) ).contains( "BB-3", "BB-4" );
@@ -91,8 +75,8 @@ class TransactionBookmarkManagerTest
     @Test
     void testBookmarkMerging()
     {
-        var b1 = bookmark( graphState( 1, "BB-1", "BB-2" ) );
-        var b2 = bookmark( graphState( 1, "BB-3" ) );
+        var b1 = bookmark( graphState( location1Uuid, "BB-1", "BB-2" ) );
+        var b2 = bookmark( graphState( location1Uuid, "BB-3" ) );
         bookmarkManager.processSubmittedByClient( List.of( b1, b2 ) );
 
         var bookmark = bookmarkManager.constructFinalBookmark();
@@ -103,49 +87,46 @@ class TransactionBookmarkManagerTest
     @Test
     void testSystemDbBookmark()
     {
-        var b1 = bookmark( graphState( 1, "BB-1" ) );
+        var b1 = bookmark( graphState( location1Uuid, "BB-1" ) );
         var b2 = new SystemDbBookmark( 1234 );
         bookmarkManager.processSubmittedByClient( List.of( b1, b2 ) );
 
-        verify( transactionIdTracker ).awaitUpToDate( NAMED_SYSTEM_DATABASE_ID, 1234, Duration.ofSeconds( 123 ) );
+        verify( transactionIdTracker ).awaitSystemGraphUpToDate( 1234 );
 
         assertThat( getBookmarksForGraph( location1 ) ).contains( "BB-1" );
     }
 
     private List<String> getBookmarksForGraph( Location.Remote graph )
     {
-        return bookmarkManager.getBookmarksForGraph( graph ).stream().flatMap( rb -> rb.getSerialisedState().stream() ).collect( Collectors.toList());
+        return bookmarkManager.getBookmarksForRemote( graph ).stream().map( RemoteBookmark::getSerialisedState ).collect( Collectors.toList());
     }
 
-    private static FabricConfig.GraphDriverConfig emptyDriverConfig()
+    private List<String> getGraphState( FabricBookmark fabricBookmark, Location location )
     {
-        return new FabricConfig.GraphDriverConfig( null, null, null, null, null, null, null, null, false );
-    }
-
-    private List<String> getGraphState( FabricBookmark fabricBookmark, Location graph )
-    {
-        List<FabricBookmark.GraphState> graphStates = fabricBookmark.getGraphStates().stream()
-                .filter( gs -> gs.getRemoteGraphId() == graph.getGraphId() )
+        List<FabricBookmark.ExternalGraphState> graphStates = fabricBookmark.getExternalGraphStates().stream()
+                .filter( gs -> gs.getGraphUuid().equals( location.getUuid() ) )
                 .collect( Collectors.toList());
         assertEquals(1, graphStates.size());
         return graphStates.get( 0 ).getBookmarks().stream()
-                .flatMap( b -> b.getSerialisedState().stream() )
+                .map( RemoteBookmark::getSerialisedState )
                 .collect( Collectors.toList());
     }
 
-    private FabricBookmark.GraphState graphState( long graphId, String... bookmarks )
+    private FabricBookmark.ExternalGraphState graphState( UUID uuid, String... bookmarks )
     {
-        return new FabricBookmark.GraphState( graphId, Arrays.stream( bookmarks ).map( this::bookmark ).collect( Collectors.toList()) );
+        return new FabricBookmark.ExternalGraphState( uuid, Arrays.stream( bookmarks )
+                .map( this::bookmark )
+                .collect( Collectors.toList()) );
     }
 
     private RemoteBookmark bookmark( String state )
     {
-        return new RemoteBookmark( Set.of(state) );
+        return new RemoteBookmark( state );
     }
 
-    private FabricBookmark bookmark( FabricBookmark.GraphState... states )
+    private FabricBookmark bookmark( FabricBookmark.ExternalGraphState... states )
     {
-        return new FabricBookmark( Arrays.asList( states ) );
+        return new FabricBookmark( List.of(), Arrays.asList( states ) );
     }
 
     private static class SystemDbBookmark implements Bookmark
